--- a/docs/styles.css
+++ b/docs/styles.css
@@ -67,8 +67,8 @@ body {
 /* Table of Contents - Left Sidebar */
 .table-of-contents {
     background: var(--bg-white);
-    width: 300px;
-    min-width: 300px;
+    width: 350px;
+    min-width: 350px;
     padding: 30px 20px;
     height: calc(100vh - 200px);
     overflow-y: auto;
@@ -119,8 +119,8 @@ body {
 }
 
 .table-of-contents a.active {
-    background-color: var(--primary-color);
-    color: white;
+    background-color: #e3f2fd;
+    color: var(--primary-color);
     font-weight: 600;
 }
 
@@ -187,15 +187,15 @@ body {
 }
 
 .table-of-contents > ul > li > a:hover {
-    background-color: var(--primary-color);
-    color: white;
-    border-left-color: var(--primary-dark);
+    background-color: #e3f2fd;
+    color: var(--primary-color);
+    border-left-color: var(--primary-color);
 }
 
 .table-of-contents > ul > li > a.active {
-    background-color: var(--primary-color);
-    color: white;
-    border-left-color: var(--primary-dark);
+    background-color: #e3f2fd;
+    color: var(--primary-color);
+    border-left-color: var(--primary-color);
 }
 
 /* Custom scrollbar for table of contents */
