Minor css chanhged

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -390,7 +390,7 @@ img {
 .screenshot-small {
     max-width: 300px;
     display: block;
-    margin: 15px 0;
+    margin: 15px auto;
 }
 
 /* Note, Tip, Success Boxes */
